cluster/apps/default/st0rage/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: st0rage
  name: st0rage
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: st0rage
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: st0rage
      name: st0rage
    spec:
      nodeSelector:
        topology.kubernetes.io/region: lab
      containers:
        - name: st0rage
          image: nginx:alpine
          imagePullPolicy: Always
          # Sized from 30 days of observed usage.
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
            limits:
              memory: 48Mi
          volumeMounts:
            - mountPath: /usr/share/nginx/html/st0rage/games
              name: games
            - mountPath: /usr/share/nginx/html/st0rage/movies
              name: movies
            - mountPath: /usr/share/nginx/html/st0rage/music
              name: music
            - mountPath: /usr/share/nginx/html/st0rage/series
              name: tvshows
            - mountPath: /etc/nginx/conf.d
              name: config-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      volumes:
        - name: games
          nfs:
            server: ${SECRET_NFS_HOST}
            path: ${SECRET_NFS_ST0RAGE_PATH}/games
        - name: movies
          nfs:
            server: ${SECRET_NFS_HOST}
            path: ${SECRET_NFS_ST0RAGE_PATH}/movies
        - name: music
          nfs:
            server: ${SECRET_NFS_HOST}
            path: ${SECRET_NFS_ST0RAGE_PATH}/music
        - name: tvshows
          nfs:
            server: ${SECRET_NFS_HOST}
            path: ${SECRET_NFS_ST0RAGE_PATH}/series
        - configMap:
            defaultMode: 420
            name: st0rage
          name: config-volume
