cluster/apps/default/st0rage/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: st0rage
  namespace: default
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "nas"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-cloudflarewarp@kubernetescrd,default-st0rage-auth@kubernetescrd"
    external-dns.kubernetes.io/target: "${SECRET_CLOUDFLARE_TUNNEL_DOMAIN}"
    external-dns.kubernetes.io/cloudflare-proxied: "true"
    external-dns/external: "true"
spec:
  tls:
    - secretName: "${SECRET_LAB_DOMAIN/./-}-tls"
      hosts:
        - st0rage.${SECRET_LAB_DOMAIN}
  rules:
    - host: st0rage.${SECRET_LAB_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: st0rage
                port:
                  name: http
